--- a/templates/base/registro_asistencia.html
+++ b/templates/base/registro_asistencia.html
@@ -3,8 +3,8 @@
 {% block title %}Detectados{% endblock %}
 {% block content %}
     <div class="container">
-        {% if registrados %}
-            <h1>ESTUDIANTES REGISTRADOS</h1>
+        {% if detectados %}
+            <h1>ESTUDIANTES DETECTADOS</h1>
             <table>
                 <thead>
                     <tr>
@@ -15,20 +15,20 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for re in registrados %}
+                    {% for detectado in detectados %}
                     <tr>
-                        <td>{{ re.nombre }}</td>
-                        <td>{{ re.fecha }}</td>
-                        <td>{{ re.hora }}</td>
+                        <td>{{ detectado.nombre }}</td>
+                        <td>{{ detectado.fecha }}</td>
+                        <td>{{ detectado.hora }}</td>
                         <td>
-                            <a class="enlace-eliminar" href="{% url 'eliminar' re.id %}" aria-label="Eliminar {{ re.nombre }}">&#x2717;</a>
+                            <a class="enlace-eliminar" href="{% url 'eliminar' detectado.id %}" aria-label="Eliminar {{ detectado.nombre }}">&#x2717;</a>
                         </td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         {% else %}
-            <h1>No hay registros disponibles todavía</h1>
+            <h1>Aun no se detecto a nadie</h1>
         {% endif %}
     </div>
 {% endblock %}
