Se elimina estilo antiguo, se agrega menu y template home

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -4,13 +4,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Platform | {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
+    {% include "layout/partials/menu.html" %}
+    <hr>
     <main>
         {% block content %}
         {% endblock %}
