--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block title %}FR | Home{% endblock %}
 {% block content %}
-    Esta es el template principal
+    <h1>Esta es el template principal</h1>
 {% endblock %}
