Nueva vista de registrados y formulario para agregar un nuevo registrado

--- a/templates/layout/partials/menu.html
+++ b/templates/layout/partials/menu.html
@@ -2,6 +2,6 @@
     <ul>
         <li><a href="{% url "home" %}">Home</a></li>
         <li><a href="{% url "detectados" %}">Detectados</a></li>
-        <li><a href="#">Registrados en BD</a></li>
+        <li><a href="{% url "registrados"%}">Registrados en BD</a></li>
     </ul>
 </nav>
