--- a/templates/base/registrados.html
+++ b/templates/base/registrados.html
@@ -11,5 +11,5 @@
     {% endfor %}
     <div>
 
-    <a href="{% url 'agregar_registro' %}">Agregar nuevo</a>
+    <a class="btn-agregar-registro" href="{% url 'agregar_registro' %}">+</a>
 {% endblock %}
