--- a/templates/base/registrados.html
+++ b/templates/base/registrados.html
@@ -3,7 +3,7 @@
 {% block title %}Registrados{% endblock %}
 {% block style %}<link rel="stylesheet" href="{% static "css/registrados.css" %}">{% endblock%}
 {% block content %}
-    <h1>Mis registrados</h1>
+    <h1>MIS REGISTRADOS</h1>
     <div style="display: flex;">
     {% for registrado in registrados %}
         <div style="border: 1px solid black;">
