--- a/static/css/registrados.css
+++ b/static/css/registrados.css
@@ -15,6 +15,23 @@
     z-index: 1000;
 }
 
+.registered-users-grid {
+    box-shadow: 0 0 5px #00000028;
+    padding: 10px;
+}
+
+.registered-users-grid .registered-user-card {
+    margin: 20px;
+    box-shadow: 0 0 10px #0000005a;
+    padding: 2px;
+    border-radius: 5px;
+    transition: transform 0.5s ease;
+}
+
+.registered-users-grid .registered-user-card:hover {
+    transform: scale(1.08);
+}
+
 
 .btn-agregar-registro:hover {
     background-color: #0056b3;
