--- a/templates/base/detectados_list.html
+++ b/templates/base/detectados_list.html
@@ -6,11 +6,11 @@
 {% block title %}Detectados{% endblock %}
 {% block content %}
     {% if detectados %}
-        <h1>ESTUDIANTES DETECTADOS</h1>
+        <h1>PERSONAS DETECTADAS</h1>
         <table>
             <thead>
                 <tr>
-                    <th>Estudiantes</th>
+                    <th>Personas</th>
                     <th>Fecha</th>
                     <th>Hora</th>
                     <th>Eliminar</th>
