--- a/templates/base/registrados.html
+++ b/templates/base/registrados.html
@@ -4,9 +4,9 @@
 {% block style %}<link rel="stylesheet" href="{% static "css/registrados.css" %}">{% endblock%}
 {% block content %}
     <h1>MIS REGISTRADOS</h1>
-    <div style="display: flex;">
+    <div style="display: flex;"  class="registered-users-grid">
     {% for registrado in registrados %}
-        <div style="border: 1px solid black;">
+        <div class="registered-user-card">
             <img alt="imagen" src="{{ registrado.imagen.url }}" style="width: 250px; height: 250px;">
             <div><p>{{ registrado.informacion }}</p></div>
         </div>
